# Computational-logic-TD1

./: README.md  TD1.opam  dune-project  nat.ml  typing.ml
lib/: dune  nat.ml  typing.ml
test/: dune  test_nat.ml  test_typing.ml
