(lang dune 3.19)

(name TD1)

(generate_opam_files true)

(source
 (github leo-leesco/Computational-logic-TD1))

(authors "Léo LEESCO <leo.leesco@polytechnique.edu>")

(maintainers "Léo LEESCO <leo.leesco@polytechnique.edu>")

(package
 (name TD1)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("integers" "first-order logic" "simply typed programs")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
